// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<button
  data-variant="tertiary"
  type="button"
  data-size="sm"
>
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="1em"
    height="1em"
    fill="none"
    viewbox="0 0 24 24"
    focusable="false"
    role="img"
    aria-hidden="true"
  >
    <path
      fill="currentColor"
      fill-rule="evenodd"
      d="M12.53 4.47a.75.75 0 0 0-1.06 0l-3.5 3.5a.75.75 0 0 0 1.06 1.06L12 6.06l2.97 2.97a.75.75 0 1 0 1.06-1.06zm-3.5 10.5a.75.75 0 0 0-1.06 1.06l3.5 3.5a.75.75 0 0 0 1.06 0l3.5-3.5a.75.75 0 1 0-1.06-1.06L12 17.94z"
      clip-rule="evenodd"
    >
    </path>
  </svg>
  Åpne alle
</button>
<br>
<u-details
  data-variant="default"
  role="group"
  aria-labelledby=":u-summary5"
>
  <u-summary
    id=":u-summary5"
    aria-expanded="false"
    role="button"
    slot="summary"
    tabindex="0"
  >
    Hva er Feide?
  </u-summary>
  <div>
    <p>
      Feide er den nasjonale løsningen for trygg innlogging og datadeling i utdanning og forskning.
    </p>
    <p>
      Svært mange av de digitale læremidlene og tjenestene som er i bruk i norsk utdanning, har Feide som innloggingsløsning.
    </p>
    <p>
      Med en Feide-bruker bruker elever, studenter, forskere og undervisere ett og samme brukernavn og passord til å logge inn på alle tjenester som har Feide som innloggingsløsning. De slipper med andre ord å huske ulike brukernavn og passord for ulike tjenester.
    </p>
  </div>
</u-details>
<u-details
  data-variant="default"
  role="group"
  aria-labelledby=":u-summary6"
>
  <u-summary
    id=":u-summary6"
    aria-expanded="false"
    role="button"
    slot="summary"
    tabindex="0"
  >
    Hva er UIDP?
  </u-summary>
  <div>
    <p>
      UIDP er Udirs nye løsning for identitets- og tilgangskontroll.
    </p>
    <p>
      Løsningen har som formål å sørge for sikker og lettfattelig pålogging for brukere til Utdanningsdirektoratets tjenester og å sørge for sikker maskintilgang til Utdanningsdirektoratets API-er. UIDP benyttes av over 30 systemer i Utdanningsdirektoratet og en betydelig mengde brukere fra sektor er registrert i systemet. I 2019 hadde UIDP over 3 millioner pålogginger.
    </p>
    <p>
      Brukere kan logge inn med tre forskjellige identitetsleverandører: Feide, ID-porten og en lokal løsning der brukerne bare ligger i UIDP. Den lokale løsningen benyttes av elever og kandidater som ikke bruker Feide.
    </p>
    <p>
      UIDP er også integrert med Udir sin gamle påloggingsløsning UBAS.
    </p>
  </div>
</u-details>
<u-details
  data-variant="default"
  role="group"
  aria-labelledby=":u-summary7"
>
  <u-summary
    id=":u-summary7"
    aria-expanded="false"
    role="button"
    slot="summary"
    tabindex="0"
  >
    Hva er UBAS?
  </u-summary>
  <div>
    <p>
      UBAS er Udirs gamle løsning for identitets- og tilgangskontroll. Fra 2022 blir UBAS gradvis faset ut og erstattet med nyere fellesløsninger (UIDP, Feide, ID-porten, Altinn Autorisasjon).
    </p>
    <p>
      Etter overgang til nye løsninger vil tildeling av roller og tjenestetilganger som hovedregel gjøres i Altinn, og ikke lenger i UBAS.
    </p>
  </div>
</u-details>
`;

exports[`In Card 1`] = `
<div
  data-variant="default"
  data-color="neutral"
>
  <u-details
    data-variant="default"
    role="group"
    aria-labelledby=":u-summary2"
  >
    <u-summary
      id=":u-summary2"
      aria-expanded="false"
      role="button"
      slot="summary"
      tabindex="0"
    >
      Vedlegg
    </u-summary>
    <div>
      <ul>
        <li>
          Vedlegg 1:
          <a
            href="#"
            target="_blank"
          >
            Regler og retningslinjer.pdf
          </a>
        </li>
        <li>
          Vedlegg 2:
          <a
            href="#"
            target="_blank"
          >
            Brevmal.docx
          </a>
        </li>
        <li>
          Vedlegg 3:
          <a
            href="#"
            target="_blank"
          >
            Illustrasjoner.zip
          </a>
        </li>
      </ul>
    </div>
  </u-details>
</div>
`;

exports[`In Card With Color 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <u-details
    data-variant="default"
    role="group"
    aria-labelledby=":u-summary3"
  >
    <u-summary
      id=":u-summary3"
      aria-expanded="false"
      role="button"
      slot="summary"
      tabindex="0"
    >
      Kva er nasjonale prøver?
    </u-summary>
    <div>
      Føremålet med nasjonale prøver er å gi skolane kunnskap om elevane sine grunnleggjande ferdigheiter i lesing, rekning og engelsk. Informasjonen frå prøvene skal danne grunnlag for undervegsvurdering og kvalitetsutvikling på alle nivå i skolesystemet.
    </div>
  </u-details>
  <u-details
    data-variant="default"
    role="group"
    aria-labelledby=":u-summary4"
  >
    <u-summary
      id=":u-summary4"
      aria-expanded="false"
      role="button"
      slot="summary"
      tabindex="0"
    >
      Korleis skal nasjonale prøver brukast?
    </u-summary>
    <div>
      <ul>
        <li>
          Lærarane skal bruke resultata for å følgje opp elevane sine og i arbeidet med undervegsvurdering og tilpassa opplæring.
        </li>
        <li>
          Kommunar og skolar skal bruke resultata som grunnlag for kvalitetsutvikling i opplæringa.
        </li>
        <li>
          Forskarar kan søkje om å få utlevert resultat frå nasjonale prøver til bruk i forsking.
        </li>
      </ul>
    </div>
  </u-details>
</div>
`;

exports[`Preview 1`] = `
<u-details
  data-variant="default"
  role="group"
  aria-labelledby=":u-summary1"
>
  <u-summary
    id=":u-summary1"
    aria-expanded="false"
    role="button"
    slot="summary"
    tabindex="0"
  >
    Kva er nasjonale prøver?
  </u-summary>
  <div>
    Føremålet med nasjonale prøver er å gi skolane kunnskap om elevane sine grunnleggjande ferdigheiter i lesing, rekning og engelsk. Informasjonen frå prøvene skal danne grunnlag for undervegsvurdering og kvalitetsutvikling på alle nivå i skolesystemet.
  </div>
</u-details>
`;

exports[`Pseudo States 1`] = `
<div style="display: flex; flex-direction: column; gap: var(--ds-size-4);">
  <label
    data-weight="medium"
    data-size="sm"
  >
    Default
  </label>
  <u-details
    data-variant="default"
    role="group"
    aria-labelledby=":u-summary8"
  >
    <u-summary
      id=":u-summary8"
      aria-expanded="false"
      role="button"
      slot="summary"
      tabindex="0"
    >
      Kva er nasjonale prøver?
    </u-summary>
    <div>
      Føremålet med nasjonale prøver er å gi skolane kunnskap om elevane sine grunnleggjande ferdigheiter i lesing, rekning og engelsk. Informasjonen frå prøvene skal danne grunnlag for undervegsvurdering og kvalitetsutvikling på alle nivå i skolesystemet.
    </div>
  </u-details>
  <label
    data-weight="medium"
    data-size="sm"
  >
    Hover
  </label>
  <u-details
    data-variant="default"
    role="group"
    aria-labelledby=":u-summary9"
  >
    <u-summary
      id=":u-summary9"
      aria-expanded="false"
      role="button"
      slot="summary"
      tabindex="0"
    >
      Kva er nasjonale prøver?
    </u-summary>
    <div>
      Føremålet med nasjonale prøver er å gi skolane kunnskap om elevane sine grunnleggjande ferdigheiter i lesing, rekning og engelsk. Informasjonen frå prøvene skal danne grunnlag for undervegsvurdering og kvalitetsutvikling på alle nivå i skolesystemet.
    </div>
  </u-details>
  <label
    data-weight="medium"
    data-size="sm"
  >
    Focused
  </label>
  <u-details
    data-variant="default"
    role="group"
    aria-labelledby=":u-summarya"
  >
    <u-summary
      id=":u-summarya"
      aria-expanded="false"
      role="button"
      slot="summary"
      tabindex="0"
    >
      Kva er nasjonale prøver?
    </u-summary>
    <div>
      Føremålet med nasjonale prøver er å gi skolane kunnskap om elevane sine grunnleggjande ferdigheiter i lesing, rekning og engelsk. Informasjonen frå prøvene skal danne grunnlag for undervegsvurdering og kvalitetsutvikling på alle nivå i skolesystemet.
    </div>
  </u-details>
</div>
`;
